--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 使用Openxls从excel文件中读取已下载书籍名称，并与剪贴板内容做比对，查询是否已下载
+命令行
+.\search_book_service.exe -f C:/Users/dsm/Desktop/20250304.xlsm -d -l C:/Users/dsm/Desktop/search_log.txt
